# stm32f4xx-project

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  arm-none-eabi.cmake
.claude/agents/: code-fixer.agent.md  code-reviewer.agent.md
.claude/rules/: architecture.md  coding-conventions.md  comment-style.md
drivers/CMSIS/Device/linker/: fake_vtor_boot.ld
examples/cli/: CLAUDE.md  cli_cmd_handle.c  cli_cmds.c  cli_cmds.h  cli_uart_port.c  main.c  stm32f4xx_it.c  uart.c  uart.h
examples/custom_app/: CLAUDE.md  STM32F411CEUX_FLASH.ld  main.c  mem_layout.h
examples/custom_boot/: CLAUDE.md  main.c  mem_layout.h  stm32f4xx_it.c
examples/ex1/: main.c  stm32f4xx_hal_conf.h  stm32f4xx_it.c
examples/freertos/: CLAUDE.md  FreeRTOSConfig.h  cli_cmd_handle.c  cli_cmds.c  cli_cmds.h  cli_uart_port.c  cli_uart_port.h  main.c  stm32f4xx_it.c  uart.c  uart.h
examples/iap_boot/: CLAUDE.md  main.c  stm32f4xx_it.c  syscalls.c
examples/ota_boot/: CLAUDE.md  STM32F411CEUX_FLASH.ld  main.c  mem_layout.h  ota_metadata.h  sha256.c  sha256.h
examples/ota_factory_app/: CLAUDE.md  STM32F411CEUX_FLASH.ld  aes.c  aes.h  main.c  mem_layout.h  ota_auth.h  ota_metadata.h  packet.h  stm32f4xx_it.c
libs/cli/: CLAUDE.md  cli.c  cli.h  cli_io.h
scripts/: memory_report.py
test/: OTA_TEST_PLAN.md  ota_host.py  test_bootloader.py  test_ota_protocol.py  test_recovery.py
